# albopictus

./: .gitignore  MANIFEST.in  NEWS.txt  README.txt  _pyproject.toml  pyproject.toml  setup.cfg  setup.py
fixes/: fix_clim.py
src/albopictus/:  *Minibuf-1*  __init__.py  accessory.py  dpop.c  dpop.h  gamma.c  gamma.h  incubator.c  incubator.h  incubator03.c  incubator03.h  modelAalbopictus.c  modelAalbopictus03.c  modelAalbopictus08.c  modelAalbopictus08b.c  modelAalbopictus08c.c  modelAalbopictus13.c  modelAalbopictus18.c  modelCulex.c  modelStochAaegypti.c  modelStochAalbopictus.c  modelStochAlbopictus.c  modelStochCDZ.c  modelStochCHIKV.c  modelStochSand.c  modelStochSand13.c  plotPos.py  ran_gen.c  ran_gen.h  readModel.py  sdpop.c  sdpop.h  setPrior.py  spop.c  spop.h  spop01.c  spop01.h
src/albopictus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/albopictus/accessory/: __init__.py
src/albopictus/data/: albopictus_F4_temp.txt  albopictus_d3_temp.txt  albopictus_d4_temp.txt  albopictus_p0_temp.txt  albopictus_p1_temp.txt  albopictus_p2_temp.txt  albopictus_tbm_temp.txt  climate.json  posterior.json  prior.json  prior03.json  prior08.json  prior18.json  priorAeae.json  priorSand.json
src/albopictus/dataSurv/: __init__.py
src/albopictus/plotPos/: __init__.py
src/albopictus/population/: __init__.py
src/albopictus/readModel/: __init__.py
src/albopictus/setPrior/: __init__.py
src/albopictus/setPrior/data/: albopictus_F4_temp.txt  albopictus_d1_temp.txt  albopictus_d2_temp.txt  albopictus_d3_temp.txt  albopictus_d4_temp.txt  albopictus_gtc_temp.txt  (+8 more)
