[metadata]
name = albopictus
version = attr: albopictus.__version__
description = Large-scale environment-driven population dynamics and disease spread models for vector-borne diseases
long_description = file: README.txt, NEWS.txt
long_description_content_type = text/plain
author = Kamil Erguler
author_email = k.erguler@cyi.ac.cy
url = https://github.com/kerguler/albopictus
download_url = https://github.com/kerguler/albopictus/tarball/%(version)s
license = GPLv3
keywords =
    stage, age, structured, gridded, global, diapause, breeding, egg, larva, pupa,
    adult, mosquito, temperature, precipitation, density, photoperiod, survival,
    development, fecundity, Bayesian, difference, daily, albopictus, sandfly, chikv,
    chikungunya, phlebotomus, papatasi
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    numpy
    scipy

[options.packages.find]
where = src

[options.package_data]
albopictus =
    data/*.json

[bdist_rpm]
requires = gsl >= 1.2
build_requires = gsl-devel >= 1.2

[build_ext]
libraries = gsl gslcblas stdc++
